# ndc-sqlserver

./: .gitignore  Cargo.toml  Dockerfile  README.md  architecture.md  changelog.md  config.json  configuration.json  connector-startup.md  debugging.md  docker-compose.yaml  flake.nix  justfile  readme.md  rust-toolchain.toml
ci/: deploy.sh
crates/cli/: Cargo.toml  readme.md
crates/cli/src/: lib.rs  main.rs  metadata.rs
crates/cli/tests/: update_tests.rs
crates/configuration/: Cargo.toml
crates/configuration/src/: configuration.rs  error.rs  introspection.rs  lib.rs  uri.rs  version1.rs
crates/configuration/src/version1/: mod.rs  version1.rs
crates/ndc-sqlserver/: Cargo.toml
crates/ndc-sqlserver/src/: configuration.rs  connector.rs  explain.rs  lib.rs  metrics.rs  mutation.rs  query.rs  schema.rs
crates/ndc-sqlserver/src/configuration/: introspection.rs  mod.rs  version1.rs
crates/ndc-sqlserver/src/error/: convert.rs  record.rs
crates/ndc-sqlserver/tests/: configuration_tests.rs  explain_tests.rs  mutation_tests.rs  ndc_tests.rs  query_tests.rs  schema_tests.rs
crates/ndc-sqlserver/tests/common/: configuration.rs  database.rs  fresh_deployments.rs  helpers.rs  mod.rs
crates/ndc-sqlserver/tests/goldenfiles/: dup_array_relationship.json  fail_insert_artist_and_return_id.json  fetch_artist_count.json  insert_artist_and_return_artist.json  insert_artist_and_return_id.json  select_many.json  select_where_name_nlike.json  select_where_variable.json  select_where_variable_int.json  value_types.json
crates/ndc-sqlserver/tests/snapshots/: explain_tests__select_by_pk.snap  explain_tests__select_where_name_nilike.snap  explain_tests__select_where_variable.snap  mutation_tests__basic__native_mutation_insert_artist_and_return_id.snap  mutation_tests__native_mutations__native_mutation_insert_artist_and_return_artist.snap  mutation_tests__native_mutations__native_mutation_insert_artist_and_return_id.snap  mutation_tests__native_mutations__native_mutation_insert_artist_and_return_id_with_aliases.snap  mutation_tests__native_mutations__negative_native_mutations_test__atomicity_native_mutations.snap  mutation_tests__stored_procedures__basic_stored_procedure_execution.snap  mutation_tests__stored_procedures__execute_stored_procedure_with_relationships.snap  mutation_tests__stored_procedures__execute_stored_procedure_without_providing_arguments.snap  query_tests__aggregation__aggregate_count_albums.snap  query_tests__aggregation__aggregate_count_albums_plus_field.snap  query_tests__aggregation__aggregate_count_albums_plus_field.snap.new  query_tests__aggregation__aggregate_count_artist_albums.snap  query_tests__aggregation__aggregate_count_artist_albums_plus_field.snap  query_tests__basic__select_5.snap  query_tests__basic__select_by_pk.snap  query_tests__basic__select_int_and_string.snap  query_tests__basic__select_many.snap  query_tests__native_queries__select_artist.snap  query_tests__native_queries__select_artist_with_album_by_title_relationship_arguments.snap  query_tests__native_queries__select_artists_below_id.snap  query_tests__native_queries__select_order_by_artist_album_count.snap  query_tests__native_queries__select_sort_relationship.snap  query_tests__native_queries__select_where_relationship.snap  query_tests__predicates__select_where_album_id_equals_self.snap  query_tests__predicates__select_where_album_id_greater_than.snap  query_tests__predicates__select_where_album_id_greater_than_or_equal_to.snap  query_tests__predicates__select_where_album_id_is_not_null.snap  query_tests__predicates__select_where_album_id_less_than.snap  query_tests__predicates__select_where_album_id_less_than.snap.new  query_tests__predicates__select_where_album_id_less_than_or_equal_to.snap  query_tests__predicates__select_where_and.snap  query_tests__predicates__select_where_name_eq.snap  query_tests__predicates__select_where_name_in.snap  query_tests__predicates__select_where_name_like.snap  query_tests__predicates__select_where_name_neq.snap  query_tests__predicates__select_where_name_nilike.snap  query_tests__predicates__select_where_name_nlike.snap  (+31 more)
crates/ndc-sqlserver/tests/static/: chinook-sqlserver.sql
crates/query-engine/: Cargo.toml
crates/query-engine/execution/: Cargo.toml
crates/query-engine/execution/src/: error.rs  execution.rs  helpers.rs  lib.rs  metrics.rs  mutation.rs  query.rs
crates/query-engine/metadata/: Cargo.toml
crates/query-engine/metadata/src/metadata/: database.rs  mod.rs  native_queries.rs  stored_procedures.rs
crates/query-engine/metrics/: Cargo.toml
crates/query-engine/metrics/src/: metrics.rs
crates/query-engine/sql/: Cargo.toml
crates/query-engine/sql/src/: lib.rs
crates/query-engine/sql/src/sql/: ast.rs  convert.rs  execution_plan.rs  helpers.rs  string.rs
crates/query-engine/src/phases/: execution.rs
crates/query-engine/tests/goldenfiles/aggregate_count_albums/: tables.json
crates/query-engine/tests/goldenfiles/dup_array_relationship/: tables.json
crates/query-engine/tests/goldenfiles/nested_aggregates/: tables.json
crates/query-engine/tests/goldenfiles/select_where_not_null/: tables.json
crates/query-engine/tests/snapshots/: tests__dup_array_relationship.snap  tests__it_aggregate_count_albums.snap  tests__it_aggregate_distinct_albums.snap  tests__it_aggregate_function_albums.snap  tests__it_converts_select_with_limit.snap  tests__it_select_where_not_null.snap  tests__it_select_where_related_exists.snap  tests__it_select_where_string.snap  tests__it_select_where_unrelated_exists.snap  tests__it_simple_array_relationship.snap  tests__it_simple_object_relationship.snap  tests__nested_aggregates.snap  tests__nested_array_relationships.snap  tests__sorting_by_nested_relationship_column.snap  tests__sorting_by_relationship_column.snap  tests__sorting_by_relationship_count.snap
crates/query-engine/translation/: Cargo.toml
crates/query-engine/translation/src/translation/: error.rs  helpers.rs  mod.rs  values.rs
crates/query-engine/translation/tests/: tests.rs
crates/query-engine/translation/tests/common/: mod.rs
(+158 files in other folders)
