[workspace]
resolver = "2"

package.version = "1.0.0"
package.edition = "2021"

members = [
  "crates/ndc-sqlserver",
  "crates/query-engine/execution",
  "crates/query-engine/metadata",
  "crates/query-engine/sql",
  "crates/query-engine/translation",
  "crates/query-engine/metrics",
  "crates/cli",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# disable certain pedantic warnings
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
# disable these for now, but we should probably fix them
default_trait_access = "allow"
explicit_into_iter_loop = "allow"
explicit_iter_loop = "allow"
from_iter_instead_of_collect = "allow"
if_not_else = "allow"
inconsistent_struct_constructor = "allow"
inefficient_to_string = "allow"
manual_let_else = "allow"
manual_string_new = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
redundant_else = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unnecessary_wraps = "allow"
unreadable_literal = "allow"
unused_async = "allow"

[workspace.dependencies]
# ndc-models was using version 0.1.2 but we needed rustls fix

ndc-models = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.6" }
ndc-sdk = { git = "https://github.com/hasura/ndc-sdk-rs.git", tag = "v0.4.0" }
ndc-test = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.6" }

smol_str = "0.1"
