[package]
name = "ndc-sqlserver-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
ndc-sqlserver-configuration = { path = "../configuration" }

anyhow = "1.0.94"
clap = { version = "4.5.4", features = ["derive", "env"] }
schemars = { version = "0.8.16", features = ["smol_str", "preserve_order"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["raw_value"] }
serde_yaml = "0.9.34"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.10.1"

[package.metadata.cargo-machete]
ignored = ["build_data"] # apparently cargo-machete doesn't find dependencies used by build scripts
