[package]
name = "ndc-sqlserver-configuration"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
ndc-models = { workspace = true }
query-engine-metadata = { path = "../query-engine/metadata" }
query-engine-metrics = { path = "../query-engine/metrics" }


schemars = { version = "0.8.16", features = ["smol_str", "preserve_order"] }
serde = "1.0.198"
serde_json = { version = "1.0.116", features = ["raw_value"] }
tiberius = { version = "0.12.2", default-features = false, features = ["rustls"] }
bb8 = "0.8.1"
bb8-tiberius = "0.15.0"
thiserror = "1.0.59"
prometheus = "0.13.3"
