[package]
name = "ndc-sqlserver"
version.workspace = true
edition.workspace = true

default-run = "ndc-sqlserver"

[lib]
name = "ndc_sqlserver"
path = "src/lib.rs"

[[bin]]
name = "ndc-sqlserver"
path = "bin/main.rs"

[dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-sdk-rs.git", rev = "6158b1adbcc4ac7d8acb721c1626f6f715424a27" }

query-engine-execution = { path = "../query-engine/execution" }
query-engine-metadata = {path = "../query-engine/metadata"}
query-engine-sql = { path = "../query-engine/sql" }
query-engine-translation = { path = "../query-engine/translation" }

tiberius = { version = "0.12.2", default-features = false, features = ["rustls"] }
bb8 = "0.8.1"
bb8-tiberius = "0.15.0"
async-trait = "0.1.74"
schemars = { version = "0.8.16", features = ["smol_str"] }
serde = { version = "^1.0.193", features = ["derive", "rc"] }
serde_json = { version = "^1.0.108", features = ["raw_value"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
prometheus = "0.13.3"
thiserror = "1.0"

[dev-dependencies]
ndc-models = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.2" }
ndc-test = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.2" }

axum = "0.6.19"
axum-test-helper = "0.3.0"
env_logger = "0.10.1"
hyper = { version = "0.14.27", features = ["tcp"] }
insta = { version = "1.34.0", features = ["json"] }
reqwest = "0.11.22"
similar-asserts = "1.5.0"
serde_derive = "1.0"
