[package]
name = "ndc-sqlserver"
version.workspace = true
edition.workspace = true

default-run = "ndc-sqlserver"

[lints]
workspace = true

[lib]
name = "ndc_sqlserver"
path = "src/lib.rs"

[[bin]]
name = "ndc-sqlserver"
path = "bin/main.rs"

[dependencies]
ndc-sdk = { workspace = true }

query-engine-execution = { path = "../query-engine/execution" }
query-engine-metadata = {path = "../query-engine/metadata"}
query-engine-sql = { path = "../query-engine/sql" }
query-engine-translation = { path = "../query-engine/translation" }

tiberius = { version = "0.12.2", default-features = false, features = ["rustls"] }
bb8 = "0.8.1"
bb8-tiberius = "0.15.0"
async-trait = "0.1.80"
schemars = { version = "0.8.16", features = ["smol_str"] }
serde = { version = "1.0.198", features = ["derive", "rc"] }
serde_json = { version = "1.0.116", features = ["raw_value"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
prometheus = "0.13.3"
thiserror = "1.0"

[dev-dependencies]
ndc-models = { workspace = true }
ndc-test = { workspace = true }

axum = "0.6.20"
axum-test-helper = "0.3.0"
env_logger = "0.11.3"
hyper = { version = "0.14.28", features = ["tcp"] }
insta = { version = "1.38.0", features = ["json"] }
reqwest = { version = "0.11.27", default-features = false, features = ["rustls-tls"] }
similar-asserts = "1.5.0"
serde_derive = "1.0"
