[package]
name = "query-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ndc-hub = { git = "https://github.com/hasura/ndc-hub.git", tag = "v0.1.0-rc.1", package = "ndc-sdk" }

tiberius = { version = "0.12.2", default-features = false, features = ["rustls"] }
bb8 = "0.8.1"
bb8-tiberius = "0.15.0"

indexmap = "1"
schemars = { version = "0.8.13", features = ["smol_str"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
sqlformat = "0.2.1"
tracing = "0.1.37"

[dev-dependencies]
insta = { version = "1.31.0", features = ["json"] }
