[package]
name = "query-engine"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["bytes"]

[dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "098b1c2", package = "ndc-sdk" }

tiberius = { version = "0.12.2", default-features = false, features = ["rustls"] }
bb8 = "0.8.1"
bb8-tiberius = "0.15.0"

bytes = "1.5.0" # only included to sort deps conflict
indexmap = "1"
schemars = { version = "0.8.15", features = ["smol_str"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlformat = "0.2.2"
tracing = "0.1.40"

[dev-dependencies]
insta = { version = "1.34.0", features = ["json"] }
