[package]
name = "query-engine-execution"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
ndc-models = { workspace = true }
query-engine-sql = { path = "../sql" }
query-engine-translation = { path = "../translation" }
query-engine-metrics = { path = "../metrics" }

tiberius = { version = "0.12.2", default-features = false, features = ["rustls"] }
bb8 = "0.8.1"
bb8-tiberius = "0.15.0"
bytes = "1.6.0"
prometheus = "0.13.3"
serde_json = "1.0.142"
sqlformat = "0.3.3"
tokio-stream = "0.1.14"
tracing = "0.1.40"
thiserror = "2.0"
