[package]
name = "query-engine-metadata"

version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
ndc-models = { workspace = true }
schemars = { version = "0.8.16", features = ["smol_str"] }
serde = { version = "1.0.198", features = ["derive"] }
smol_str = { workspace = true }
