[package]
name = "query-engine-translation"

version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]

ndc-sdk = { workspace = true }

query-engine-metadata = { path = "../metadata" }
query-engine-sql = { path = "../sql" }

indexmap = "2.1"
serde_json = "1.0.107"

[dev-dependencies]
insta = { version = "1.34.0", features = ["json"] }
sqlformat = "0.2.2"
