[package]
name = "query-engine-translation"

version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]

ndc-sdk = { workspace = true }

query-engine-metadata = { path = "../metadata" }
query-engine-sql = { path = "../sql" }

indexmap = "2.1"
serde_json = "1.0.116"

[dev-dependencies]
insta = { version = "1.38.0", features = ["json"] }
sqlformat = "0.2.3"
